--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
-    <link href="style.production.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <ul class="pokemonlist"></ul>
+     <script src="js/promise-polyfill.js"></script>
+     <script src="js/fetch.umd (1).js"></script>
      <script src="js/scripts.js"></script>
+    </body>
 
-
-  </body>
+  
 </html>
