--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <ul class="pokemonlist"></ul>
+    <ul class="pokemon-list"></ul>
      <script src="js/promise-polyfill.js"></script>
      <script src="js/fetch.umd (1).js"></script>
      <script src="js/scripts.js"></script>
