--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="myModalLabel">Modal title</h5>
+            
             <button type="button" class="close" data-dismiss="modal" data-target="#myModal" data-toggle="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-
-          </div>
+          <img src="" alt="" id="pokemon-image"> 
+          <h5 id="pokemon-title"></h5>
+          <div id="pokemon-height"></div>
           <div class="modal-footer">
+
+          
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
@@ -61,7 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="js/promise-polyfill.js"></script> <!-- load the polyfill first before the fetch and then the script.js -->
-    <script src="js/fetch.umd(1).js"></script>
+    <script src="js/fetch.umd (1).js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
